--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -8,4 +8,4 @@ log4j.appender.file.File=swirrl-server.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdlog.layout.ConversionPattern=%d{ISO8601} %-5p %20.20c{1} %12X{jobId} %12X{reqId} :: %m%n
+log4j.appender.file.layout.ConversionPattern=%d{ISO8601} %-5p %20.20c{1} %12X{jobId} %12X{reqId} :: %m%n
